Prevent scrollbar from taking up space

--- a/css/bottom-card.css
+++ b/css/bottom-card.css
@@ -30,7 +30,7 @@
 .bottom-card .saves-container {
   height: 290px;
   width: 100%;
-  overflow-y: auto;
+  overflow-y: overlay;
   scroll-behavior: smooth;
 }
 
